Changelog
=========


0.5 (unreleased)
----------------

- Add ``Products.CMFPlone`` as dependency for Plone4.1+.
  [WouterVH] 

- Added compatibility IImageScaleTraversable.
  [kroman0] 


0.4 (2013-02-21)
-----------------------------

- Fixed plone41 compatibility.
  [kroman0]


0.3 (2009-06-12)
----------------

- Added missing 0.2 and 0.3 versions changeset entries.
  [piv]

- Added scale field to make it possible to have images of different sizes on 
  portlet, before this scale was hardcoded to mini size, added appropriate test.
  [piv]

- Added danish (da) translation.
  [tmog]

- Added backwards-compatibility to constructor.
  [mborch]


0.2 (2009-06-12)  
----------------

- Major code cleanup.
  [mborch]

- Based links-field on collective.formlib.link.
  [mborch]


0.1 (2009-06-12)
----------------

- Some code style cleanups and proper use of our own MessageFactory.
  [hannosch]

- Added a proper check for text, since its a kupu/wysiwyg field len(text) is not enough
  [pelle_]

- First css / markup shoot - added support for local css and changed portlet markup to 
  take care of the various list links styles
  [pelle_]

- Improved the functional test for adding the rich portlet. Now the adding 
  portlet part in the plone portlet management made straight with the test.browser
  [pelle_]

- Links css styles dictionary implemented to make it possible to get various 
  looks for the list of links
  [pelle_]

- Change links list into are more *simple* approach - it got a bit confused 
  with 3 separate lists for creating a links list. Lets work further with 
  *one* links list - though this requires that the content provider is more 
  keen on writing up the url "url:title:description"
  [pelle_]

- Separate read / more url for portlet header / footer
  [pelle_]

- Cleaning up to get the copied stuff from plone.portlet.static to work inside plone.portlet.static
  [pelle_]

- Org. files from the wysiwyg branch of plone.portlet.static